<resources>
    <string name="default_helper_site_host" translatable="false">https://connect.foodlogiq.com</string>
    <string name="select_business">Select Business</string>

    <string name="action_settings">Settings</string>
    <string name="enter_restaurant_number">Enter Facility/Location Number</string>
    <string name="save_as_default">Save as Default</string>

    <string name="food_quality_reporting">Food Quality Reporting</string>
    <string name="problem">Problem</string>
    <string name="product">Product</string>
    <string name="gtin_label" translatable="false">GTIN</string>
    <string name="enter_lot">Enter Lot</string>
    <string name="use_by_date">Use By Date</string>
    <string name="use_by_date_label">Use By Date:</string>
    <string name="lot">Lot</string>
    <string name="lot_label">Lot</string>
    <string name="customer_complaint">Customer Complaint</string>
    <string name="foreign_object">Foreign Object</string>
    <string name="off_color">Off Color</string>
    <string name="off_flavor">Off Flavor</string>
    <string name="off_odor">Off Odor</string>
    <string name="mold">Mold</string>
    <string name="packaging_issue">Packaging Issue</string>
    <string name="piece_size">Piece Size</string>
    <string name="short_shelf_life_delivery">Short Shelf-Life Delivery</string>
    <string name="other">Other</string>
    <string name="problem_type">Problem Type</string>
    <string name="add_pictures">Add Pictures </string>
    <string name="app_name">Connect Mobile</string>
    <string name="login_header">Connect</string>
    <string name="scan">Scan</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="request_credit">Request Credit</string>
    <string name="quantity">Quantity</string>
    <string name="type_label">Type:</string>
    <string name="complaint_label">Complaint:</string>
    <string name="additional_description">Additional Description</string>
    <string name="customer">Customer</string>
    <string name="quantity_label">Quantity:</string>
    <string name="additional_description_label">Additional Description:</string>
    <string name="yes">Yes</string>
    <string name="invoice_number_label">Invoice Number:</string>
    <string name="credit_request_label">Credit Request:</string>
    <string name="credit_request">Credit Request</string>
    <string name="problem_details">Problem Details</string>
    <string name="location_label">Location:</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="found_by_label">Found By</string>
    <string name="pack_date">Pack Date</string>
    <string name="packed_date_label">Pack Date:</string>
    <string name="incident_logs">View Quality Report Log</string>
    <string name="receipt_logs">View Delivery Logs</string>
    <string name="create_receipt">Receive a Delivery</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="temperature">Temperature</string>
    <string name="info">Info</string>
    <string name="contents">Contents</string>
    <string name="manual_entry_label">Enter Manually</string>
    <string name="enter_gtin">Enter GTIN Manually</string>
    <string name="clear_completed_logs">Clear Completed Logs</string>
    <string name="bad_label">Bad Label</string>
    <string name="short_delivery">Short Delivery</string>
    <string name="late_delivery">Late Delivery</string>
    <string name="missing_delivery">Missing Delivery</string>
    <string name="inaccurate_delivery">Inaccurate Delivery</string>
    <string name="over_delivered">Over Delivered</string>
    <string name="damaged_delivery">Damaged Delivery</string>
    <string name="datawedge_import_prompt">
        In order to utilize the built in scanner, we need to import our DataWedge profile.
        This will overwrite any other profiles in DataWedge.
        You may still use the camera if you choose not to.
        If you change your mind, you may import it later via the settings menu.
        Do you want to proceed?
    </string>
    <string name="logout_confirm">Are you sure you want to log out</string>
    <string name="select_location">Select A Different Restaurant</string>
    <string name="create_quality_report">Create a Quality Report</string>
    <string name="supplier">Supplier</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="packaging_question">Do you still have the packaging?</string>
    <string name="store_id">Store ID</string>
    <string name="incident_details">Incident Details</string>
    <string name="distribution_issue">Distribution Issue</string>
    <string name="type">Type</string>
    <string name="attached_photos">Attached Photos</string>
    <string name="quantity_abbr" translatable="false">Qty</string>
    <string name="manually_enter_barcode_information">Manually enter barcode information</string>
    <string name="scan_a_case_to_get_started">Scan a case to get started.</string>

    <!-- General Strings -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="product_source">Product Source</string>
    <string name="store_transfer_question">Store Transfer?</string>
    <string name="enter_gtin_upc_itf">Enter GTIN / UPC / ITF</string>
    <string name="store_bought">Store Bought</string>
    <string name="enter_store_id">Enter Store Id</string>
    <string name="add_product">Add Product</string>
    <string name="distributor">Distributor</string>
    <string name="hardware">Hardware</string>
    <string name="camera">Camera</string>
    <string name="scan_device">Scan Device:</string>
    <string name="create_shipment">Create a Shipment</string>
    <string name="shipment_logs">View Shipment Logs</string>
    <string name="transform_products">Transform Products</string>
    <string name="transform_logs">View Transform Logs</string>
    <string name="location">Location</string>
    <string name="custom_event_type">Custom Event Type</string>
    <string name="inputs_scan_prompt">Enter your product inputs</string>
    <string name="outputs_scan_prompt">What are the outputs of this transformation?</string>
    <string name="lot_code">Lot Code</string>
    <string name="use_thru">Use Thru</string>
    <string name="use_thru_label">Use Thru:</string>
    <string name="transformation_inputs">Transformation Inputs</string>
    <string name="transformation_outputs">Transformation Outputs</string>
    <string name="total_items">Total Items</string>
    <string name="shipping_to">Shipping To</string>
</resources>
