<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/scan_list_header"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/dk_gray"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="5dp"
              android:visibility="gone"
              android:weightSum="1">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/product"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/lot"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="right"
        android:text="@string/quantity_abbr"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
</LinearLayout>