<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/incident_confirm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_border"
                android:text="@string/incident_details"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product" />

                    <TextView
                        android:id="@+id/confirm_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gtin_label" />

                    <TextView
                        android:id="@+id/confirm_product_gtin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pack_date" />

                    <TextView
                        android:id="@+id/confirm_product_pack_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity" />

                    <TextView
                        android:id="@+id/confirm_product_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lot_label" />

                    <TextView
                        android:id="@+id/confirm_product_lot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_by_date" />

                    <TextView
                        android:id="@+id/confirm_product_use_by_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bottom_border"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/confirm_incident_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distribution_issue" />

                    <TextView
                        android:id="@+id/confirm_incident_distribution_issue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_request" />

                    <TextView
                        android:id="@+id/confirm_incident_credit_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_complaint" />

                    <TextView
                        android:id="@+id/confirm_incident_customer_complaint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bottom_border"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            style="@style/label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/found_by_label" />

                        <TextView
                            android:id="@+id/confirm_incident_found_by_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            style="@style/label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title" />

                        <TextView
                            android:id="@+id/confirm_incident_found_by_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_description" />

                <TextView
                    android:id="@+id/confirm_incident_additional_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/confirm_incident_photo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attached_photos" />

            <GridView
                android:id="@+id/confirm_incident_photo_grid"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:columnWidth="75dp"
                android:horizontalSpacing="2dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>